--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Art Museum Wall – 4 Doors</title>
+  <title>Art Portfolio</title>
   <style>
     html, body {
       margin: 0;
@@ -276,3 +276,4 @@
   </script>
 </body>
 </html>
+
