--- a/index.html
+++ b/index.html
@@ -3,29 +3,103 @@
 <head>
   <meta charset="UTF-8" />
   <title>Art Portfolio</title>
+
+  <!-- FAVICON (browser tab image) -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="shortcut icon" href="images/favicon.png">
+
   <style>
     html, body {
       margin: 0;
       width: 100%;
       height: 100%;
-      background: #111;
       overflow: hidden;
       font-family: "Helvetica Neue", Arial, sans-serif;
-      position: relative;
+      background: radial-gradient(circle at bottom, #02030a 0%, #000 70%);
     }
+
+    /* =======================
+       STARFIELD BACKGROUND
+       ======================= */
+
+    .stars,
+    body::before,
+    body::after {
+      content: "";
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    /* MANY SMALL STARS */
+    body::before {
+      background-image:
+        radial-gradient(1px 1px at 10px 20px, #fff 50%, transparent 51%),
+        radial-gradient(1px 1px at 40px 80px, #fff 50%, transparent 51%),
+        radial-gradient(1px 1px at 90px 140px, #fff 50%, transparent 51%),
+        radial-gradient(1px 1px at 160px 60px, #fff 50%, transparent 51%),
+        radial-gradient(1px 1px at 220px 200px, #fff 50%, transparent 51%),
+        radial-gradient(1px 1px at 300px 120px, #fff 50%, transparent 51%);
+      background-size: 250px 250px;
+      opacity: 0.65;
+      animation: starsSlow 180s linear infinite;
+    }
+
+    /* MEDIUM STARS */
+    body::after {
+      background-image:
+        radial-gradient(2px 2px at 60px 90px, #fff 50%, transparent 51%),
+        radial-gradient(2px 2px at 180px 140px, #fff 50%, transparent 51%),
+        radial-gradient(2px 2px at 320px 260px, #fff 50%, transparent 51%);
+      background-size: 500px 500px;
+      opacity: 0.4;
+      animation: starsMedium 140s linear infinite;
+    }
+
+    /* FAINT DISTANT STARS */
+    .stars {
+      background-image:
+        radial-gradient(1px 1px at 120px 60px, #aaa 50%, transparent 51%),
+        radial-gradient(1px 1px at 240px 180px, #aaa 50%, transparent 51%),
+        radial-gradient(1px 1px at 360px 300px, #aaa 50%, transparent 51%);
+      background-size: 700px 700px;
+      opacity: 0.25;
+      animation: starsFar 220s linear infinite;
+    }
+
+    @keyframes starsSlow {
+      from { background-position: 0 0; }
+      to { background-position: -2000px 2000px; }
+    }
+
+    @keyframes starsMedium {
+      from { background-position: 0 0; }
+      to { background-position: 1500px -1500px; }
+    }
+
+    @keyframes starsFar {
+      from { background-position: 0 0; }
+      to { background-position: -1000px -1000px; }
+    }
+
+    /* =======================
+       SCENES
+       ======================= */
 
     .scene, .scene-new {
       width: 1400px;
       height: 700px;
       background: linear-gradient(#f5f3ef, #e6e2da);
       border: 12px solid #2b2b2b;
-      box-shadow: 0 30px 80px rgba(0,0,0,0.6);
+      box-shadow: 0 30px 80px rgba(0,0,0,0.8);
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       transition: all 1s ease;
       overflow: hidden;
+      z-index: 1;
     }
 
     .scene.hidden {
@@ -39,7 +113,6 @@
       justify-content: center;
       align-items: center;
       opacity: 0;
-      z-index: 2;
       pointer-events: none;
     }
 
@@ -48,82 +121,39 @@
       pointer-events: auto;
     }
 
-    .gallery-content {
-      display: flex;
-      flex-direction: row; /* painting left, text right */
-      align-items: center;
-      justify-content: center;
-      gap: 40px;
-    }
-
-    .painting-frame {
-      width: 500px;
-      height: 350px;
-      padding: 15px;
-      border: 12px solid #654321;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-      background-color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .painting {
-      width: 100%;
-      height: 100%;
-      background-size: cover;
-      background-position: center;
-    }
-
-    .painting-info {
-      max-width: 400px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    .painting-info h2 {
-      font-size: 32px;
-      margin: 0;
-      color: #222;
-    }
-
-    .painting-info p {
-      font-size: 20px;
-      color: #333;
-      line-height: 1.4;
-    }
-
-    .back-button {
-      padding: 10px 20px;
-      font-size: 18px;
-      font-weight: bold;
-      background: #eee;
-      color: #222;
-      border: 2px solid #bbb;
-      cursor: pointer;
-      border-radius: 6px;
-      margin-top: 20px;
-      transition: 0.3s;
-      align-self: flex-start;
-    }
-
-    .back-button:hover {
-      background: #ddd;
-    }
-
     .section-title {
       font-size: 36px;
       font-weight: 800;
       letter-spacing: 3px;
       color: #2b2b2b;
       text-transform: uppercase;
-      text-shadow: 0 2px 4px rgba(0,0,0,0.15);
       text-align: center;
-      margin-bottom: 20px;
-      width: 100%;
+      margin-top: 30px;
     }
 
+    /* ABOUT BUTTON */
+    .about-button {
+      position: absolute;
+      top: 90px;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: 14px 30px;
+      font-size: 18px;
+      font-weight: 700;
+      background: #2b2b2b;
+      color: #f5f3ef;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      letter-spacing: 1px;
+      transition: 0.3s;
+    }
+
+    .about-button:hover {
+      background: #444;
+    }
+
+    /* DOORS */
     .doors {
       position: absolute;
       bottom: 120px;
@@ -131,23 +161,17 @@
       display: flex;
       justify-content: space-evenly;
       padding: 0 60px;
-      box-sizing: border-box;
-      transition: all 0.8s ease;
     }
 
     .door {
       width: 170px;
       height: 340px;
       border: 5px solid #2b1a0f;
-      box-shadow: inset 0 0 0 2px rgba(255,255,255,0.05), 0 14px 28px rgba(0,0,0,0.45);
-      position: relative;
-      transition: all 0.8s ease;
-      cursor: pointer;
       background: linear-gradient(#6b4a2b, #4a321c);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 1;
+      box-shadow: 0 14px 28px rgba(0,0,0,0.5);
+      position: relative;
+      cursor: pointer;
+      transition: 0.8s ease;
     }
 
     .door::before {
@@ -160,18 +184,11 @@
       background: #c9b26d;
       border-radius: 50%;
       transform: translateY(-50%);
-      box-shadow: 0 0 4px rgba(0,0,0,0.6);
     }
 
     .door-hitbox {
       position: absolute;
-      top: -20px;
-      left: -20px;
-      width: 210px;
-      height: 380px;
-      cursor: pointer;
-      z-index: 10;
-      background: transparent;
+      inset: -20px;
     }
 
     .plaque {
@@ -180,100 +197,173 @@
       left: 50%;
       transform: translateX(-50%);
       background: #eee;
-      color: #222;
       padding: 6px 10px;
       font-size: 12px;
-      letter-spacing: 0.5px;
       border: 1px solid #bbb;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      max-width: 150px;
-      text-align: center;
       white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      pointer-events: none;
+    }
+
+    /* GALLERY */
+    .gallery-content {
+      display: flex;
+      gap: 40px;
+      align-items: center;
+    }
+
+    .painting-frame {
+      width: 500px;
+      height: 350px;
+      padding: 15px;
+      border: 12px solid #654321;
+      background: white;
+    }
+
+    .painting {
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center;
+    }
+
+    .painting-info {
+      max-width: 400px;
+    }
+
+    .painting-info h2 {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
+
+    .painting-info p {
+      font-size: 20px;
+    }
+
+    /* ABOUT */
+    .about-content {
+      max-width: 700px;
+      text-align: center;
+    }
+
+    .about-content h2 {
+      font-size: 36px;
+      margin-bottom: 20px;
+    }
+
+    .about-content p {
+      font-size: 20px;
+      line-height: 1.6;
+      margin-bottom: 20px;
+    }
+
+    .back-button {
+      padding: 10px 20px;
+      font-size: 18px;
+      font-weight: bold;
+      background: #eee;
+      border: 2px solid #bbb;
+      cursor: pointer;
+      border-radius: 6px;
     }
   </style>
 </head>
+
 <body>
-  <!-- main Scene -->
+
+  <div class="stars"></div>
+
+  <!-- MAIN SCENE -->
   <div class="scene" id="scene-main">
     <div class="section-title">Layne Robinson's Portfolio</div>
+    <button class="about-button" id="about-button">About Me</button>
+
     <div class="doors">
-      <div class="door" data-door="1" data-image="images/night-picture.JPG" data-title="Watercolor Night" data-desc="A delicate watercolor piece capturing the night sky over a quiet town.">
+      <div class="door" data-image="images/night-picture.JPG" data-title="Watercolor Night" data-desc="A delicate watercolor piece capturing the night sky.">
         <div class="door-hitbox"></div>
         <div class="plaque">Watercolor Night</div>
       </div>
-      <div class="door" data-door="2" data-image="images/album.JPG" data-title="Oil Pastel Album Cover" data-desc="An expressive oil pastel illustration designed as a music album cover.">
+
+      <div class="door" data-image="images/album.JPG" data-title="Oil Pastel Album Cover" data-desc="An expressive oil pastel illustration.">
         <div class="door-hitbox"></div>
-        <div class="plaque">Oil Pastel Album Cover</div>
+        <div class="plaque">Oil Pastel Album</div>
       </div>
-      <div class="door" data-door="3" data-image="images/master-copy.png" data-title="Gallery III" data-desc="Part of a series exploring abstract forms and vibrant colors.">
+
+      <div class="door" data-image="images/master-copy.png" data-title="Artist Master Copy" data-desc="A study based on a masterwork.">
         <div class="door-hitbox"></div>
-        <div class="plaque">Artist master copy</div>
+        <div class="plaque">Master Copy</div>
       </div>
-      <div class="door" data-door="4" data-image="images/contour.jpg" data-title="Final Contour Drawing" data-desc="A detailed contour drawing emphasizing line and form.">
+
+      <div class="door" data-image="images/contour.jpg" data-title="Final Contour Drawing" data-desc="A contour drawing focused on line and form.">
         <div class="door-hitbox"></div>
-        <div class="plaque">Final Contour Drawing</div>
+        <div class="plaque">Contour Drawing</div>
       </div>
     </div>
   </div>
 
-  <!-- gallery scene -->
-  <div class="scene-new" id="scene-new">
+  <!-- GALLERY SCENE -->
+  <div class="scene-new" id="scene-gallery">
     <div class="gallery-content">
       <div class="painting-frame">
         <div class="painting" id="painting"></div>
       </div>
       <div class="painting-info">
-        <h2 id="painting-title">Title</h2>
-        <p id="painting-desc">Description</p>
-        <button class="back-button" id="back-button">Back</button>
+        <h2 id="painting-title"></h2>
+        <p id="painting-desc"></p>
+        <button class="back-button" id="gallery-back">Back</button>
       </div>
     </div>
   </div>
 
+  <!-- ABOUT SCENE -->
+  <div class="scene-new" id="scene-about">
+    <div class="about-content">
+      <h2>About Me</h2>
+      <p>
+        Im Layne Robinson, I am a computer programmer with a passion in cybersecurity.
+        I, by no means am an artist, but I love creating and observing art in all forms.
+      </p>
+      <p>
+        This portfolio is designed as a physical gallery experience, each door
+        representing a new piece.
+      </p>
+      <button class="back-button" id="about-back">Back</button>
+    </div>
+  </div>
+
   <script>
-    const doors = document.querySelectorAll('.door');
     const sceneMain = document.getElementById('scene-main');
-    const sceneNew = document.getElementById('scene-new');
+    const sceneGallery = document.getElementById('scene-gallery');
+    const sceneAbout = document.getElementById('scene-about');
+
     const painting = document.getElementById('painting');
     const paintingTitle = document.getElementById('painting-title');
     const paintingDesc = document.getElementById('painting-desc');
-    const backButton = document.getElementById('back-button');
 
-    doors.forEach((door) => {
-      const hitbox = door.querySelector('.door-hitbox');
-
-      hitbox.addEventListener('click', () => {
-        const imageSrc = door.dataset.image;
-        const title = door.dataset.title;
-        const desc = door.dataset.desc;
-
-        painting.style.backgroundImage = `url('${imageSrc}')`;
-        paintingTitle.textContent = title;
-        paintingDesc.textContent = desc;
+    document.querySelectorAll('.door').forEach(door => {
+      door.querySelector('.door-hitbox').addEventListener('click', () => {
+        painting.style.backgroundImage = `url('${door.dataset.image}')`;
+        paintingTitle.textContent = door.dataset.title;
+        paintingDesc.textContent = door.dataset.desc;
 
         sceneMain.classList.add('hidden');
-        setTimeout(() => sceneNew.classList.add('visible'), 800);
-      });
-
-      hitbox.addEventListener('mouseenter', () => {
-        door.style.transform = 'scale(1.03)';
-        door.style.boxShadow = '0 20px 40px rgba(0,0,0,0.6)';
-      });
-
-      hitbox.addEventListener('mouseleave', () => {
-        door.style.transform = 'scale(1)';
-        door.style.boxShadow = 'inset 0 0 0 2px rgba(255,255,255,0.05), 0 14px 28px rgba(0,0,0,0.45)';
+        setTimeout(() => sceneGallery.classList.add('visible'), 800);
       });
     });
 
-    backButton.addEventListener('click', () => {
-      sceneNew.classList.remove('visible');
+    document.getElementById('gallery-back').addEventListener('click', () => {
+      sceneGallery.classList.remove('visible');
+      setTimeout(() => sceneMain.classList.remove('hidden'), 500);
+    });
+
+    document.getElementById('about-button').addEventListener('click', () => {
+      sceneMain.classList.add('hidden');
+      setTimeout(() => sceneAbout.classList.add('visible'), 800);
+    });
+
+    document.getElementById('about-back').addEventListener('click', () => {
+      sceneAbout.classList.remove('visible');
       setTimeout(() => sceneMain.classList.remove('hidden'), 500);
     });
   </script>
+
 </body>
 </html>
-
