--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Art Portfolio</title>
 
   <link rel="icon" type="image/png" href="images/icon.png">
-  <link rel="shortcut icon" href="images/favicon.png">
+  <link rel="shortcut icon" href="images/icon.png">
 
   <style>
     html, body {
@@ -349,4 +349,5 @@
 
 </body>
 </html>
+
 
