--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="plaque">Oil Pastel Album</div>
       </div>
 
-      <div class="door" data-image="images/master-copy.png" data-title="Artist Master Copy" data-desc="A study based on a masterwork.">
+      <div class="door" data-image="images/master-copy.png" data-title="Artist Master Copy" data-desc="During the drawing of my Master Copy, I faced many challenges. Such as being severely late, even though it’s my own fault, and using all of the oil pastel techniques correctly to reach a final product. Given those challenges I still managed to prevail and finish my Artist Master Copy.">
         <div class="door-hitbox"></div>
         <div class="plaque">Master Copy</div>
       </div>
@@ -349,5 +349,6 @@
 
 </body>
 </html>
+
 
 
