--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <button class="about-button" id="about-button">About Me</button>
 
     <div class="doors">
-      <div class="door" data-image="images/night-picture.JPG" data-title="Watercolor Night" data-desc="A delicate watercolor piece capturing the night sky.">
+      <div class="door" data-image="images/night-picture.JPG" data-title="While working on my Japanese Night Painting, I made sure that I used my class time wisely. Using my class time wisely allowed me to make great progress while not sacrificing the quality of my work. All taken into account, using my class time correctly makes a huge impact on the outcome of your project.">
         <div class="door-hitbox"></div>
         <div class="plaque">Watercolor Night</div>
       </div>
@@ -349,6 +349,7 @@
 
 </body>
 </html>
+
 
 
 
