--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <div class="plaque">Master Copy</div>
       </div>
 
-      <div class="door" data-image="images/contour.jpg" data-title="Final Contour Drawing" data-desc="A contour drawing focused on line and form.">
+      <div class="door" data-image="images/contour.jpg" data-title="While working on my Contour drawing I learned to apply the techniques that I learned in class to my drawing. Using the techniques learned allowed me to greatly speed up the progress and improve the outcome. In contrast to attempting to “Wing it”, using techniques from class assisted me in more ways than one.">
         <div class="door-hitbox"></div>
         <div class="plaque">Contour Drawing</div>
       </div>
@@ -349,6 +349,7 @@
 
 </body>
 </html>
+
 
 
 
