--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <div class="plaque">Watercolor Night</div>
       </div>
 
-      <div class="door" data-image="images/album.JPG" data-title="Oil Pastel Album Cover" data-desc="An expressive oil pastel illustration.">
+      <div class="door" data-image="images/album.JPG" data-title="Oil Pastel Album Cover" data-desc="During the drawing of my Oil Pastel Album Cover, I made sure to make use of multiple attempts. My first attempt was used to create a general outline of what I wanted to create. Then I used my second attempt as my final copy. Using my outline as reference to help me create a better final copy.">
         <div class="door-hitbox"></div>
         <div class="plaque">Oil Pastel Album</div>
       </div>
@@ -349,6 +349,7 @@
 
 </body>
 </html>
+
 
 
 
